--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,121 @@
-requests
-python-dotenv
-pandas
-numpy
-coinbase
-scikit-learn
-streamlit
-plotly
-textblob
-tweepy
+aiohappyeyeballs==2.4.6
+aiohttp==3.11.12
+aiosignal==1.3.2
+altair==5.5.0
+annotated-types==0.7.0
+asn1crypto==1.5.1
+attrs==25.1.0
+backtrader==1.9.78.123
+bip-utils==2.9.3
+bitarray==3.0.0
+blinker==1.9.0
+cachetools==5.5.1
+cbor2==5.6.5
+cdp-sdk==0.17.0
+certifi==2023.7.22
+cffi==1.17.1
+charset-normalizer==3.3.2
+ckzg==2.0.1
+click==8.1.8
+coinbase==2.1.0
+coincurve==20.0.0
+contourpy==1.3.1
+crcmod==1.7
+cryptography==44.0.1
+cycler==0.12.1
+cytoolz==1.0.1
+dateparser==1.2.1
+Deprecated==1.2.18
+ecdsa==0.19.0
+ed25519-blake2b==1.4.1
+eth-account==0.13.5
+eth-hash==0.7.1
+eth-keyfile==0.8.1
+eth-keys==0.6.1
+eth-rlp==2.2.0
+eth-typing==5.1.0
+eth-utils==5.2.0
+eth_abi==5.2.0
+Flask==3.1.0
+Flask-Limiter==3.10.1
+Flask-Login==0.6.3
+fonttools==4.56.0
+frozenlist==1.5.0
+gitdb==4.0.12
+GitPython==3.1.44
+hexbytes==1.3.0
+idna==3.4
+itsdangerous==2.2.0
+Jinja2==3.1.5
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+kiwisolver==1.4.8
+limits==4.0.1
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.0
+mdurl==0.1.2
+multidict==6.1.0
+narwhals==1.25.2
+nltk==3.9.1
+numpy==2.2.2
+oauthlib==3.2.2
+ordered-set==4.1.0
+packaging==24.2
+pandas==2.2.3
+pandas_ta==0.3.14b0
+parsimonious==0.10.0
+pillow==11.1.0
+plotly==6.0.0
+propcache==0.2.1
+protobuf==5.29.3
+py-sr25519-bindings==0.2.1
+pyarrow==19.0.0
+pycparser==2.22
+pycryptodome==3.21.0
+pydantic==2.10.6
+pydantic_core==2.27.2
+pydeck==0.9.1
+pygame==2.5.0
+Pygments==2.19.1
+PyJWT==2.10.1
+PyNaCl==1.5.0
+pyparsing==3.2.1
+python-binance==1.0.27
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.0
+pytz==2024.2
+pyunormalize==16.0.0
+referencing==0.36.2
+regex==2024.11.6
+requests==2.31.0
+requests-oauthlib==2.0.0
+rich==13.9.4
+rlp==4.1.0
+rpds-py==0.22.3
+scikit-learn==1.6.1
+scipy==1.15.1
+six==1.17.0
+smmap==5.0.2
+streamlit==1.42.0
+tenacity==9.0.0
+textblob==0.19.0
+threadpoolctl==3.5.0
+toml==0.10.2
+toolz==1.0.0
+tornado==6.4.2
+tqdm==4.67.1
+tweepy==4.15.0
+types-requests==2.32.0.20241016
+typing_extensions==4.12.2
+tzdata==2024.2
+tzlocal==5.2
+urllib3==2.3.0
+watchdog==6.0.0
+web3==7.8.0
+websocket-client==1.8.0
+websockets==13.1
+Werkzeug==3.1.3
+wrapt==1.17.2
+yarl==1.18.3
